k8s/base/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  selector:
    matchLabels: { app: zipkin }
  template:
    metadata:
      labels: { app: zipkin }
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:3
          ports: [{ containerPort: 9411 }]
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  selector: { app: zipkin }
  ports: [{ port: 9411, targetPort: 9411 }]
